Fix cursor position after drawing Sixel graphics

Moving all cursor and scroll handling to addPlacement.

This requires the moveCursor parameter to have three possible values,
since Sixel cursor movement is not the same as Kitty/iterm2. This also
unnecessitates addPlacement return value.

BUG: 452476
(cherry picked from commit 9ae57f4e1de920d1a30b8f64448fd6c186a36730)